Fix inline-block on different parent letter-spacing

--- a/src/scss/_form-gallery.scss
+++ b/src/scss/_form-gallery.scss
@@ -16,6 +16,7 @@
 .formgallery-list{
     @include border-top-radius($formgallery-border-radius);
     padding: $formgallery-padding-y $formgallery-padding-x;
+    letter-spacing: 0;
     flex: 1;
     overflow: auto;
     font-size: 0;
